2003-07-30  Matthias Clasen  <maclas@gmx.de>

	* glib/gutils.c (g_unsetenv): Use same argument name as in header, to pacify gtk-doc.

	* glib-2.0.pc.in (Libs): Remove forgotten @TRIO_LIBS@.  (#118616, Noah Levitt)

	* glib/gfileutils.[hc]: Rename g_read_link() to g_file_read_link() to better match the remaining file
	utilities in the g_file_ namespace and to better separate it from readlink(). This is hopefully no problem 
	as the function is just 2 days old.

2003-07-29  Matthias Clasen  <maclas@gmx.de>

	* glib/gqsort.[hc] (g_qsort_with_data): 
	* glib/gconvert.[hc] (g_filename_to_uri, g_filename_from_uri): 
	* glib/gfileutils.[hc] (g_mkstemp, g_file_open_tmp): Use gchar, gint, gsize instead of char, int, size_t 
	in the interface for consistency.  (#118567)

	Replace trio printf() by gnulib vasnprintf():  (#101874)
	
	* configure.in: Define HAVE_LONG_LONG_FORMAT if system printf understands %llu; rename enable_trio to 
	enable_included_printf; add misc. tests needed for gnulib vasnprintf(); define G_GINT{16,32,64}_MODIFIER
	in glibconfig.h.

	* acinclude.m4: Misc tests needed for gnulib vasnprintf(): AC_FUNC_SNPRINTF_C99, bh_C_SIGNED, jm_AC_TYPE_LONG_LONG,
	gt_TYPE_LONGDOUBLE, gt_TYPE_WCHAR_T, gt_TYPE_WINT_T, gt_AC_TYPE_INTMAX_T, jm_AC_HEADER_STDINT_H, 
	jm_AC_HEADER_INTTYPES_H. 

	* glib/Makefile.am: Replace TRIO_SUBDIR by PRINTF_SUBDIR and trio_libtrio_la by printf_la. 

	* glib/gprintfint.h: Include gnulib/printf.h and use _g_gnulib_ functions instead of _g_trio_ functions.

	* glib/trio/*: Removed

	* glib/gnulib/*: vasnprintf() implementation from gnulib, patched to live in the _g_gnulib namespace, use
	g_malloc instead of malloc, and support long long printing even if system printf doesn't. For more details,
	see glib/gnulib/README.
	
	* tests/printf-test.c: Add tests for 64 bit printing.

2003-07-28  Matthias Clasen  <maclas@gmx.de>

	* glib/gfileutils.h: 
	* glib/gfileutils.c: New function g_read_link(). (#72545)
